Fix Railway deployment - remove unnecessary build scripts

--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "npm": ">=9.0.0"
   },
   "scripts": {
-    "start": "node src/app.js",
-    "start:prod": "cross-env NODE_ENV=production node src/app.js",
-    "dev": "nodemon src/app.js",
-    "dev:debug": "cross-env DEBUG=* nodemon --inspect src/app.js",
-    "build": "npm run clean && npm run build:client && npm run build:server",
-    "build:client": "webpack --mode production",
-    "build:server": "babel src -d dist --copy-files",
-    "clean": "rimraf dist coverage .nyc_output",
+    "start": "node server.js",
+    "start:prod": "NODE_ENV=production node server.js",
+    "dev": "nodemon server.js",
+    "dev:debug": "DEBUG=* nodemon --inspect server.js",
+    "build": "echo 'No build required for production'",
+    "build:client": "echo 'No client build required'",
+    "build:server": "echo 'No server build required'",
+    "clean": "echo 'No cleaning required'",
     "test": "jest --config jest.config.js",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage --coverageReporters=text-lcov | coveralls",
