--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,14 +1,17 @@
 # Nixpacks configuration for Railway deployment
-# This configures how Railway builds and serves the static JDM Portal site
+# This configures how Railway builds and serves the JDM Portal Node.js application
 
 [phases.setup]
 nixPkgs = ["nodejs-18_x"]
 
 [phases.install]
-cmds = ["npm install --global serve"]
+cmds = ["npm install --production"]
+
+[phases.build]
+cmds = ["npm run build"]
 
 [start]
-cmd = "serve -s . -l $PORT"
+cmd = "npm start"
 
 [variables]
 NODE_ENV = "production"
