--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,14 +1,11 @@
 # Nixpacks configuration for Railway deployment
-# This configures how Railway builds and serves the JDM Portal Node.js application
+# Simple static HTML site configuration
 
 [phases.setup]
 nixPkgs = ["nodejs-18_x"]
 
 [phases.install]
-cmds = ["npm install --production"]
-
-[phases.build]
-cmds = ["npm run build"]
+cmds = ["npm install"]
 
 [start]
 cmd = "npm start"
